--- a/VRChat/08/1263008.html
+++ b/VRChat/08/1263008.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
     "defer" nonce=
-    "AqG70pE8YqxzznggURnrmV1TyVFbVoArIGk3/6VYfAc="></script>
+    "qlB9zmnJdkQ3i3sCBomN88WUcnM2vRbI2wc+ruM0JpU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アイススパイクの書","description":"バーチャルマーケット2\nスペース 異世界マルシェ B中央区17\n\n\n【アイススパイクの書】\n\n魔法が放てる本です。\n本・本をめくるアニメーション・氷パーティクル・氷シェーダがセットで同梱されています。\n\nVケット2の会場、異世界マルシェB中央区にてお試し装備ができます。\nvket-catalog.appspot.com/?world=10 \n\nお値段を付けた商品ですが、プレゼント等には自由に再配布して構いません。\n\nVRChatでの使用を想定しています。\nただし、使用に制限があるわけではありません。\n\n----------------------\n【そのた】\n改変、商用利用、アバターやワールドへの同梱などなど大丈夫です。\n再配布については、誰でもダウンロードできる場所に公開さえしなければ自由にしてもらって構いません。","url":"https://booth.pm/ja/items/1263008","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1263008/1fdd4b20-652f-410e-8467-62f798a9c7e3_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AqG70pE8YqxzznggURnrmV1TyVFbVoArIGk3/6VYfAc="></script>
+    nonce="qlB9zmnJdkQ3i3sCBomN88WUcnM2vRbI2wc+ruM0JpU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -176,7 +176,7 @@
                           "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              297
+                              298
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -191,7 +191,7 @@
                           "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              297
+                              298
                             </div>
                           </div></a>
                         </div>
@@ -571,7 +571,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;},{&quot;label&quot;:&quot;acosta!マルシェvol.4&quot;,&quot;value&quot;:&quot;acosta-marche4&quot;},{&quot;label&quot;:&quot;NEOKET4&quot;,&quot;value&quot;:&quot;neoket4&quot;},{&quot;label&quot;:&quot;#エアブー230319&quot;,&quot;value&quot;:&quot;air-boo-0319&quot;}]"
+    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
